[project]
name = "sylabutil"
version = "0.0.3"
description = "A utility library that provides data reading and laboratory-specific plotting methods for laboratory instruments."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
dependencies = { file = "requirements.txt" }
authors = [
  { name = "Seiya Yamaguchi", email = "sei.rm0307@gmail.com" },
]
keywords = ["research", "utility", "parser"]

[project.urls]
Repository = "https://github.com/Sy-Yamaguchi-cat/sy-labutil"

[project.scripts]
"sylabutil-U0080D" = "sylabutil.U0080D.__main__:plot"
"sylabutil-TAC" = "sylabutil.TAC.__main__:plot"
"sylabutil-LS45" = "sylabutil.LS45.__main__:plot"
