[project]
authors = [
  {name = "Seiya Yamaguchi", email = "sei.rm0307@gmail.com"},
]
dependencies = [
  "numpy",
  "pandas",
  "matplotlib",
  "xlrd==1.2.0",
]
description = "A utility library that provides data reading and laboratory-specific plotting methods for laboratory instruments."
keywords = ["research", "utility", "parser"]
license = {file = "LICENSE"}
name = "sylabutil"
readme = "README.md"
requires-python = ">=3.8"
version = "0.0.5"

[project.urls]
Repository = "https://github.com/Sy-Yamaguchi-cat/sy-labutil"

[project.scripts]
"sylabutil-LS45" = "sylabutil.LS45.__main__:plot"
"sylabutil-TAC" = "sylabutil.TAC.__main__:plot"
"sylabutil-U0080D" = "sylabutil.U0080D.__main__:plot"
"sylabutil-UV1280" = "sylabutil.UV1280.__main__:plot"
